syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PasswordService {
   rpc hash(HashRequest) returns (HashResponse);
  // rpc validate(google.protobuf.Empty) returns (PasswordResponse);
}

message HashRequest {
	int32 userId = 1;
    string password = 2;
    
}

message HashResponse {
	int32 userId = 1;
    string hashedPassword = 2;
}